@@ -30,7 +30,7 @@ __END__
 This subclass of L<HTTP::Throwable::Factory> arranges for each built/thrown
 exception to consume the L<HTTP::Throwable::Role::JSONBody> role, which
 will generate HTTP responses with an C<application/json> content type and
-encode the provided payload using L<JSON::MaybeXS>.
+encode the (optional) provided payload using L<JSON::MaybeXS>.
 
 The C<payload> attribute passed to C<http_throw> or C<http_exception> should
 be anything allowed by L<JSON/encode_json> (hashref, arrayref, etc).
