@@ -6,11 +6,14 @@ use JSON::MaybeXS;
 
 has payload => (
   is => 'ro',
-  required => 1,
 );
 
 sub body {
   my $self = shift;
+
+  # Preempt bad clients that can't handle application/json with empty
+  # body
+  return "{}" unless $self->payload;
 
   return encode_json($self->payload);
 }
@@ -35,8 +38,9 @@ __END__
 
 =head1 OVERVIEW
 
-This role does two things - accepts a C<payload> argument that should be
-anything you can pass to L<JSON/"encode_json">, and then encodes it as the
-body, specifying a C<Content-Type> of C<application/json>.
+This role does two things - accepts an optional C<payload> argument that
+should be anything you can pass to L<JSON/"encode_json">, and then encodes
+it as the body, specifying a C<Content-Type> of C<application/json>. If no
+C<payload> is provided, the body will be C<{}>.
 
 =cut
