@@ -35,4 +35,27 @@ use HTTP::Throwable::JSONFactory qw(http_throw);
   ) or diag explain $exception->as_psgi;
 }
 
+{
+  my $exception;
+
+  try {
+    http_throw('Gone');
+  }  catch {
+    $exception = $_;
+  };
+
+  is_deeply(
+    $exception->as_psgi,
+    [
+      410,
+      [
+        'Content-Type'   => 'application/json',
+        'Content-Length' => '2',
+      ],
+      [ '{}' ],
+    ],
+    "Excpetion looks right when no payload is specified"
+  ) or diag explain $exception->as_psgi;
+}
+
 done_testing;
